# auth-flow-app

./: README.md
auth-backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  integration-guide.md
auth-backend/migrations/: 20250628174835_lively_math.sql
auth-backend/src/: lib.rs  main.rs
auth-backend/src/config/: database.rs  mod.rs  settings.rs
auth-backend/src/database/: mod.rs
auth-backend/src/handlers/: admin.rs  analytics.rs  auth.rs  mod.rs  user.rs
auth-backend/src/middleware/: auth.rs  cors.rs
auth-backend/src/models/: auth.rs  mod.rs  response.rs  user.rs
auth-backend/src/services/: admin_service.rs  auth_service.rs  mod.rs  user_service.rs
auth-backend/src/utils/: jwt.rs  mod.rs  password.rs  validation.rs
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/components/ui/: Button.tsx  (+5 more)
frontend/src/constants/: config.ts
frontend/src/contexts/: ActivityContext.tsx  AuthContext.tsx
frontend/src/hooks/: useForm.ts  useSessionTimer.ts  useTheme.ts
frontend/src/pages/: AdminDashboard.tsx  Analytics.tsx  Dashboard.tsx  Landing.tsx  Login.tsx  Profile.tsx  Register.tsx  SecuritySettings.tsx  Settings.tsx  Users.tsx
frontend/src/services/: adminService.ts  analyticsService.ts  api.ts  authService.ts  userService.ts
frontend/src/types/: api.ts  auth.ts
frontend/src/utils/: formatters.ts  storage.ts  validation.ts
